--- a/frontend/src/main/resources/index.scss
+++ b/frontend/src/main/resources/index.scss
@@ -18,7 +18,6 @@ body {
 
 
 .clickable {
-    color: var(--primary-orange);
     cursor: pointer;
 }
 
@@ -70,3 +69,6 @@ body {
     padding: 20px;
 }
 
+.primary-link {
+    color: var(--primary-orange);
+}
